--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "eslint --ext .js,.jsx,.ts,.tsx --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.6.7",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "framer-motion": "^4",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -26,6 +30,8 @@
     "eslint-plugin-react": "^7.25.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^7.0.2",
+    "playwright-aws-lambda": "0.7.0",
+    "playwright-core": "next",
     "prettier": "^2.3.2",
     "sanitize.css": "^12.0.1",
     "sass": "^1.39.0",
